data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1587.wast
;; 8. **Test Description**:     - Implement a loop with multiple `br_if` statements switching between true and false conditions, ensuring proper loop continuation.    - **Constraint Checking**: Verifies alternating path execution within loop boundaries, maintaining correct stack transitions.    - **Infinite Loop Relation**: Prevents alternating paths from causing anomalies and infinite loops due to mismanagement in operand evaluation and label handling.

(assert_invalid
  (module
    (func (loop 
      (block 
        (br_if 1 (i32.const 1)) 
        (br_if 0 (i32.const 0)) 
        (br_if 0 (i32.const 1))
        (br_if 1 (i32.const 0))
      )
    ))
  )
  "type mismatch"
)